# mandelbrot-sfml-imgui

./: CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  app.cpp  app.h  cli.cpp  cli.h  duration.h  gradient.cpp  gradient.h  main.cpp  mandelbrot.cpp  mandelbrot.h  message_queue.h  messages.h  phase.cpp  phase.h  pixel_color.h  register_events.cpp  register_events.h  stopwatch.h  supervisor.cpp  supervisor.h  supervisor_status.cpp  supervisor_status.h  task_master.cpp  task_master.h  task_worker.cpp  task_worker.h  ui.cpp  ui.h  window.cpp  window.h  worker.cpp  worker.h
src/app/: app.cpp  app.h
src/clock/: clock.h  duration.h
src/command_line/: command_line.cpp  command_line.h
src/event_handler/: command.h  event_handler.cpp  event_handler.h  events.h
src/gradient/: gradient.cpp  gradient.h
src/mandelbrot/: mandelbrot.cpp  mandelbrot.h
src/messages/: message_queue.h  messages.h
src/supervisor/: supervisor.cpp  supervisor.h  supervisor_commands.h  supervisor_status.h
src/ui/: colors.h  input_value.h  interface_hidden_hint_window.cpp  interface_hidden_hint_window.h  ui.cpp  ui.h  ui_commands.h
src/util/: mutex_timer.h
src/window/: window.cpp  window.h  window_commands.h
src/worker/: worker.cpp  worker.h
